Fixes a bug in the MeetingManager component causing the Zoom join link and password from not showing. Also adds 20px of margin to the bottom of the entire app

--- a/src/client/stylesheets/app.css
+++ b/src/client/stylesheets/app.css
@@ -9,6 +9,7 @@ h1, h2, h3, p, button {
 
 .app {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .alert {
